# georgia_tech_test

./: README.md
backend/: README.md  main.py  pyproject.toml
backend/data/: inserts.sql  panama_imports.csv  partner_data.csv
backend/services/: connection.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: DataTable.js
