[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eddy Cedeño <miguepoke28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.1"
pandas = "^1.3.2"
python-dotenv = "^0.19.0"
fastapi = "^0.109.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
